# tfg-fast-diagnosis-system

./: .gitignore  270523_200_10  LOGBOOK.md  README.md  TODO.md  create_requirements.sh  docker-compose.yml  test.ipynb
UI/front/src/: App.js  Chat.js  Diagnose.js  PatientData.js
cache/appendonlydir/: appendonly.aof.1.base.rdb
cassandra/: README.md
cassandra/data/data/system/compaction_history-b4dbb7b4dc493fb5b3bfce6e434832ca/: nb-37-big-CompressionInfo.db  nb-37-big-Data.db  (+13 more)
cassandra/data/saved_caches/: KeyCache-f.crc  KeyCache-f.db
cassandra/scripts/: dropks.cql  init.cql  init.sh
data-loader/: .env  .env.template  README.md  cassandradb.py  config.py  load.py  main.py  pyproject.toml  requirements.txt
data-loader/app/: cassandradb.py  config.py  datagen.py  main.py  translator.py
data-loader/app/datasets/: allergies.csv
data-loader/datasets/diseases/: disease_description.csv  disease_precaution.csv
dataloader/: Dockerfile  README.md  entrypoint.sh
dataloader/app/: main.py  requirements.txt
dataloader/app/resources/dataset/: meds.csv  test.ipynb
fca/: Dockerfile  FDG_engine.r  FDS_api.r  FDS_benchmark.r  FDS_dataloader.r  FDS_engine.r  FDS_sasmock.r  README.md  benchmark_testing.r  diseases.rds  fc.rds  final_diag.r  requirements.r  run_api.r  service.r  source_dataframe.rds  sparse.r  symptoms.rds  test2.r  testnew.r
fca/benchmarks/: benchmark_results.csv  statistics.txt
fca/data/: fc_dis.RData  implications.rds  sparse.csv
fca/formalcontexts/: 010623_2000_10.rds  010623_3000_10.rds  270523_1000_10  270523_500_10
fca/resources/: fc.rds  implications.rds
fca/resources/dataset/: fc_release_22052023_195542.rds  fc_release_24052023_090721.rds
front/: Dockerfile  README.md  package-lock.json  package.json
front/public/: index.html
front/src/: App.css  App.js  Chat.js  Chat2.css  Chat2.js  Header.css  Header.js  PatientData.css  PatientData.js  PatientDataPage.js  PatientDataTable.js  Portal.js
frontend/: app.py  run.py
frontend/app/: __init__.py
frontend/app/blueprints/: diagnosis.py  patient.py  portal.py
frontend/static/css/: styles.css
frontend/templates/: diagnosis.html  index.html  layout.html  patient.html  portal.html
orq/: Dockerfile  README.md
orq/app/: main.py  requirements.txt
redis/: docker-compose.yml
redis/appendonlydir/: appendonly.aof.1.incr.aof
sasmock/: Dockerfile  README.md  pyproject.toml
sasmock/app/: cassandradb.py  config.py  identity.py  logger.py  main.py  names_f.txt  names_m.txt  requirements.txt  surnames.txt
sasmock/app/scripts/: init.cql  init.sh
translator/: .env  .env.template  Dockerfile  README.md  config.py  logger.py  main.py  pyproject.toml  requirements.txt
translator/app/: config.py  logger.py  main.py
translator/app/cache/: redis.py
translator/app/translator_engine/: translator.py
translator/app/translator_engine/Helsinki-NLP/opus-mt-en-es/: config.json
translator/cache/: redis.py
translator/translator_engine/: translator.py
(+74 files in other folders)
