[tool.poetry]
name = "sasmock"
version = "0.1.0"
description = ""
authors = ["Fco Aguilera <aguimorefran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
cassandra-driver = "^3.25.0"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
scipy = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
