[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Francisco Aguilera <aguimorefran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.18.3"
fastapi = "^0.80.0"
pydantic = "^1.9.2"
python-dotenv = "^0.20.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
